--- a/airbyte-webapp/package.json
+++ b/airbyte-webapp/package.json
@@ -52,6 +52,7 @@
     "react-router-dom": "^6.3.0",
     "react-select": "^4.3.1",
     "react-table": "^7.8.0",
+    "react-tether": "^2.0.8",
     "react-use": "^15.3.8",
     "react-use-intercom": "^1.5.2",
     "react-widgets": "^4.6.1",
@@ -91,6 +92,7 @@
     "@types/react-lazylog": "^4.5.1",
     "@types/react-select": "^4.0.16",
     "@types/react-table": "^7.7.12",
+    "@types/react-tether": "^1.0.0",
     "@types/react-widgets": "^4.4.7",
     "@types/sanitize-html": "^2.6.2",
     "@types/styled-components": "^5.1.25",
